@@ -1,0 +1,13 @@
+kramdown::
+A Markdown-superset converter
++
+____
+Aren't they all?
+____
+
+kramdown-asciidoc::
+A Markdown to AsciiDoc converter based on kramdown
++
+____
+AsciiDoc is where it's at!
+____
