@@ -1,0 +1,7 @@
+kramdown
+: A Markdown-superset converter
+  > Aren't they all?
+
+kramdown-asciidoc
+: A Markdown to AsciiDoc converter based on kramdown
+  > AsciiDoc is where it's at!
